Feature: FindJavaWindow throuth a window handle
Finds a Java Window throuth a native window handle.

--- a/src/JavaAutoNetConsole/JavaAutoNetConsole.csproj
+++ b/src/JavaAutoNetConsole/JavaAutoNetConsole.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\JavaAutomationV1\JavaAutomationV1.csproj" />
     <ProjectReference Include="..\JavaAutoNet.Core\JavaAutoNet.Core.csproj" />
   </ItemGroup>
 
