--- a/src/JavaAutomationV1/JavaAutomationV1.csproj
+++ b/src/JavaAutomationV1/JavaAutomationV1.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JavaAutoNet.Core\JavaAutoNet.Core.csproj" />
+  </ItemGroup>
+
 </Project>
